# rymdbiljard

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js
rymdbiljard/: fn.main.html  index.html  sidebar-items.js
rymdbiljard/arrow/: DEFAULT_LENGTH.v.html  ROTATION_SPEED.v.html  ShootingMode.t.html  constant.DEFAULT_LENGTH.html  constant.MAX_LENGTH.html  constant.ROTATION_SPEED.html  enum.ShootingMode.html  index.html  sidebar-items.js  struct.Arrow.html
rymdbiljard/blackhole/: Blackhole.t.html  index.html  sidebar-items.js  struct.Blackhole.html
rymdbiljard/game/: CollisionPair.t.html  fn.white_ball_position.html  index.html  sidebar-items.js  struct.CollisionPair.html  struct.Game.html  white_ball_position.v.html
rymdbiljard/goalzone/: Goalzone.t.html  constant.RADIUS.html  index.html  sidebar-items.js  struct.Goalzone.html
rymdbiljard/math/: calc_magnitude.v.html  fn.calc_magnitude.html  index.html  sidebar-items.js
rymdbiljard/physics/: FRICTION.v.html  ball_ball_collision.v.html  ball_wall_collision.v.html  calculate_friction.v.html  calculate_gravity.v.html  constant.FRICTION.html  fn.ball_ball_collision.html  fn.ball_wall_collision.html  fn.calculate_friction.html  fn.calculate_gravity.html  fn.gravity_acceleration.html  fn.time_to_ball_ball_collision.html  fn.time_to_wall_collision.html  gravity_acceleration.v.html  index.html  sidebar-items.js  time_to_ball_ball_collision.v.html  (+1 more)
src/: arrow.rs  blackhole.rs  game.rs  goal.rs  goalzone.rs  golfball.rs  main.rs  math.rs  physics.rs  planet.rs  poolball.rs  worldbox.rs
(+21 files in other folders)
