[package]
name = "rymdbiljard"
version = "0.1.0"
authors = [
  "holmgr <viktor.holmgren@gmail.com>",
  "alexsaaf <alexandersaaf95@gmail.com>",
  "fumoffu947 <philip_yeah@hotmail.com"
]

[dependencies]
piston = "0.26.0"
piston2d-graphics = "0.17.0"
pistoncore-glutin_window = "0.31.0"
piston_window = "0.57.0"
piston2d-opengl_graphics = "0.34.0"
nalgebra = "0.10.*"
num-traits = "0.1.36"
